hphp/hack/test/typecheck/function_pointer/class_const_self_bad.php.rust_elab.exp
File "class_const_self_bad.php", line 7, characters 10-13:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `Foo::baz` instead (Naming[2113])
File "class_const_self_bad.php", line 8, characters 8-14:
Invalid argument (Typing[4110])
  File "class_const_self_bad.php", line 4, characters 30-32:
  Expected `int`
  File "class_const_self_bad.php", line 8, characters 8-14:
  But got `string`
