hphp/hack/test/typecheck/function_pointer/class_const_self_bad.php
<?hh

final class Foo {
  public static function baz(int $x): void {}

  public function bar(): void {
    $x = self::baz<>;
    $x('hello');
  }
}
